# Focus_Guardian_Desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: build.yml
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  README.md  cargo-errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppIcon.tsx  InterventionOverlay.tsx  SimulationBar.tsx  useTrayController.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  FocusGauge.tsx  FocusTimeline.tsx  Modal.tsx  Toast.tsx  Toggle.tsx  TrendChart.tsx
src/lib/: contextEngine.ts  defaultApps.ts  desktopController.ts  focusEngine.ts  storage.ts  tauriBridge.ts  toneEngine.ts  types.ts  useFocusStore.ts
src/lib/ai/: attentionPredictor.ts  semanticClassifier.ts
src/views/: Analytics.tsx  AppManagement.tsx  Dashboard.tsx  Landing.tsx  Settings.tsx
