[package]
name = "focusguardian"
version = "1.0.0"
description = "The Intelligent Desktop Assistant for Deep Work"
authors = ["FocusGuardian"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "focusguardian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
